Course add and delete functionality

--- a/src/css/CourseListStyleClient.css
+++ b/src/css/CourseListStyleClient.css
@@ -4,6 +4,12 @@
     font-style: italic;
     font-weight: bolder;
     font-size: larger;
-
 }
 
+#newCourse{
+    width: 100%;
+    height: 60px;
+    padding-left: 1%!important;
+    font-size: large;
+    font-style: italic;
+}
