--- a/src/css/ModuleEditorStyleClient.css
+++ b/src/css/ModuleEditorStyleClient.css
@@ -17,3 +17,8 @@ padding-bottom: 100%!important;
     content: "\f067";
     color: white;
 }
+
+a{
+    font-size: large;
+    color: white!important;
+}
